[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vs_liif"
version = "1.0.0"
description = "AI resizing to arbitrary resolutions in Vapoursynth using LIIF. Upscaling and downscaling."
authors = [{ name = "pifroggi" }]
license = { text = "BSD-3-Clause" }

dependencies = [
	"torch",
    "numpy"
]

[tool.setuptools.package-data]
vs_liif = ["models/*.pth"]

[project.urls]
Home-page = "https://github.com/pifroggi/vs_liif"
Repository = "https://github.com/pifroggi/vs_liif"